Week2 Assignment done

--- a/Week2/assignment/assignment/src/CMakeLists.txt
+++ b/Week2/assignment/assignment/src/CMakeLists.txt
@@ -6,7 +6,10 @@ target_sources(assignment
         logger.cpp
         multi_writer.cpp
         stream_writer.cpp
-
+        clogger_adapter.cpp
+        decorator.cpp
+        
         decorators/timestamp_decorator.cpp
+        decorators/runningtime_decorator.cpp
 
         )
